# repair_portal

./: .babelrc.prod  .deepsource.toml  .eslintrc  .flake8  .gitignore  .pre-commit-config.yaml  .tmp_doctype_edges.tsv  AGENTS.md  CHANGELOG.md  DEV_LOGIC_SUMMARY.md  FINAL_SYSTEM_ALIGNMENT_SUMMARY.md  Makefile  README.md  WORKSPACE.md  apps.json  automated_install.sh  biome.json  changelog.md  cl-inst-profile.txt  client_instr_profile.txt  controller_review.md  cypress.config.js  delete_repair_workspace.py  doctype_audit_summary.md  env.sh  eslint.config.js  filelist.txt  gitapply.txt  jsconfig.json  license.txt  message.txt  modules.txt  package-lock.json  package.json  planned-features.md  playwright.config.ts  pyproject.toml  repair_portal_app_tree.txt  repair_portal_tree.txt  requirements.txt  (+9 more)
.build/: cross_module_map.json
.jules/: bolt.md  palette.md  sentinel.md
OPS/: ACCESSIBILITY_CHECKLIST.md  APPROVALS_PAYMENTS.md  CONTRIBUTING.md  ESTIMATOR.md  I18N_COVERAGE.md  INVENTORY.json  INVENTORY.md  RUNBOOK.md  SECURITY_PERMISSIONS_MATRIX.md  SNAPSHOT.md
REPORT/: inventory.md  static_findings.md
cypress/: run_all_tests.sh
docs/: ARCHITECTURE_SERVICES.md  CROSS_LINK_MATRIX.md  CROSS_MODULE_MAP.md  OPERATIONS_CHECKLIST.md
doctype/: DOCTYPE.md
documentation/: REPORT.md  WORKFLOW.md  clarinet_module_review.md  intake_desk_ui_guide.md
fviz/: repair_portal_overview.plantuml
image_log_entry/: image_log_entry.json  test_image_log_entry.py
patches/: customer_sign_off.diff  instrument_wellness.diff  my_instruments.diff  ocr_import.diff  useWellness.diff
repair_portal/: -.doctype_audit_report.json  .babelrc.prod  .doctype_audit_issues.csv  .doctype_audit_report.json  AUDIT_COMPLETION_CERTIFICATE.md  README.md  (+29 more)
(+2415 files in other folders)
